package assignment_3.dto;

public interface Displayable {
    String toDisplayString();
}
